--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "react": "17.0.2",
     "react-countup": "6.2.0",
+    "react-detect-click-outside": "^1.1.2",
     "react-dom": "17.0.2",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "6.3.0",
