--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-wordcloud": "^1.2.7",
     "recharts": "2.1.9",
     "recoil": "0.7.0",
+    "rsuite": "^5.13.1",
     "tailwind-scrollbar-hide": "1.1.7",
     "web-vitals": "2.1.4"
   },
